@@ -328,12 +328,17 @@ reported team code.}
 
 \ibi{Alternate 1}{Altn 1}{Name and bearing to the best alternate
 landing location.}
-\ibi{Alternate 2}{Altn 2}{Name and bearing to the second alternate
+\ibi{Alternate 2}{Altn 2}{Name and bearing to the second-best alternate
 landing location.}
-\ibi{Alternate 1 GR}{Altn1 GR}{Geometric gradient to the arrival height above
-the best alternate. This is not adjusted for total energy.}
-\ibi{Alternate 2 GR}{Altn2 GR}{Geometric gradient to the arrival height above
-the second alternate. This is not adjusted for total energy.}
+\ibi{Alternate 1 GR}{Altn 1 GR}{Geometric gradient to the arrival height above
+the best alternate landing location. This is not adjusted for total energy.}
+\ibi{Alternate 2 GR}{Altn 2 GR}{Geometric gradient to the arrival height above
+the second-best alternate landing location. This is not adjusted for total
+energy.}
+\ibi{Alternate 1 altitude difference}{Altn 1 AltD}{Arrival altitude at the best
+alternate landing location relative to the safety arrival height.}
+\ibi{Alternate 2 altitude difference}{Altn 2 AltD}{Arrival altitude at the
+second-best alternate landing location relative to the safety arrival height.}
 
 %%%%%%%%%%%
 \section{Obstacles}
