@@ -30,3 +30,16 @@ public:
 private:
   unsigned index;
 };
+
+class InfoBoxContentAlternateAltDiff : public InfoBoxContent
+{
+public:
+  explicit InfoBoxContentAlternateAltDiff(const unsigned _index) noexcept
+    :index(_index) {}
+
+  void Update(InfoBoxData &data) noexcept override;
+  const InfoBoxPanel *GetDialogContent() noexcept override;
+
+private:
+  unsigned index;
+};
